--- a/Projects/012-SpringBoot/001-DemoCoreAnnotations/src/main/resources/application.properties
+++ b/Projects/012-SpringBoot/001-DemoCoreAnnotations/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=Application-Java-Maven
+spring.application.name=CoreAnnotationsApp
+
+app.message.time.current=Current time
+app.message.date.current=Current date
+app.message.datetime.current=Current date time
+app.message.datetime.start=Start date time
