--- a/Projects/012-SpringBoot/001-DemoCoreAnnotations/src/main/resources/application.properties
+++ b/Projects/012-SpringBoot/001-DemoCoreAnnotations/src/main/resources/application.properties
@@ -4,3 +4,5 @@ app.message.time.current=Current time
 app.message.date.current=Current date
 app.message.datetime.current=Current date time
 app.message.datetime.start=Start date time
+
+com.edaakyil.datetime.format.custom=MM-dd-yyyy hh:mm:ss a
