--- a/Projects/012-SpringBoot/001-DemoCoreAnnotations/src/main/resources/application.properties
+++ b/Projects/012-SpringBoot/001-DemoCoreAnnotations/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=CoreAnnotationsApp
 
+spring.profiles.active=dev
+
 app.message.time.current=Current time
 app.message.date.current=Current date
 app.message.datetime.current=Current date time
