--- a/Projects/012-SpringBoot/001-DemoCoreAnnotations/src/main/resources/application-dev.properties
+++ b/Projects/012-SpringBoot/001-DemoCoreAnnotations/src/main/resources/application-dev.properties
@@ -1,3 +1,8 @@
 spring.application.name=CoreAnnotationsApp-Dev
 
 com.edaakyil.datetime.format.custom=yyyy/MM/dd HH:mm:ss
+
+app.message.profile.1=Message-1: internal-dev profile
+app.message.profile.2=Message-2: internal-dev profile
+app.message.profile.3=Message-3: internal-dev profile
+app.message.profile.4=Message-4: internal-dev profile
