--- a/Projects/012-SpringBoot/001-DemoCoreAnnotations/src/main/resources/application.properties
+++ b/Projects/012-SpringBoot/001-DemoCoreAnnotations/src/main/resources/application.properties
@@ -8,3 +8,9 @@ app.message.datetime.current=Current date time
 app.message.datetime.start=Start date time
 
 com.edaakyil.datetime.format.custom=MM-dd-yyyy hh:mm:ss a
+
+app.message.profile.1=Message-1: internal-default profile
+app.message.profile.2=Message-2: internal-default profile
+app.message.profile.3=Message-3: internal-default profile
+app.message.profile.4=Message-4: internal-default profile
+app.message.profile.5=Message-5: internal-default profile
