--- a/Projects/012-SpringBoot/007-DemoPasswordGeneratorServiceApp/ServiceLib/pom.xml
+++ b/Projects/012-SpringBoot/007-DemoPasswordGeneratorServiceApp/ServiceLib/pom.xml
@@ -7,27 +7,20 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.0</version>
+        <version>3.3.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.edaakyil</groupId>
-    <artifactId>PasswordGeneratorRepositoryLib</artifactId>
+    <artifactId>PasswordGeneratorServiceLib</artifactId>
     <version>1.0.0</version>
-    <name>PasswordGeneratorRepositoryLib</name>
+    <name>PasswordGeneratorServiceLib</name>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>javaapp1-nov-2023-maven-repo</id>
-            <url>https://raw.github.com/oguzkaran/javaapp1-nov-2023-maven-repo/main</url>
-        </repository>
-    </repositories>
 
     <dependencies>
         <dependency>
@@ -38,8 +31,14 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.32</version>
+            <version>1.18.34</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.1</version>
         </dependency>
 
         <dependency>
@@ -50,14 +49,14 @@
         </dependency>
 
         <dependency>
-            <groupId>org.csystem</groupId>
-            <artifactId>org-csystem-util</artifactId>
-            <version>12.0.0</version>
+            <groupId>com.edaakyil</groupId>
+            <artifactId>com-edaakyil-java-lib-data</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
             <groupId>com.edaakyil</groupId>
-            <artifactId>com-edaakyil-java-lib-data</artifactId>
+            <artifactId>PasswordGeneratorRepositoryLib</artifactId>
             <version>1.0.0</version>
         </dependency>
     </dependencies>
